# CPP-Workshop

./: .gitignore  README.md
adapter/: adapt_legacy_rectangle.cc  adapt_legacy_rectangle.hh  adapter_example.cc  legacy_rectangle.cc  legacy_rectangle.hh
address_book/: address_book.cc  address_book.hh  contact_details.cc  contact_details.hh  main.cc
bimap/: bimap.hh  bimap.hxx  bimap_example.cc
builder/: builder.cc  builder.hh  car.hh  components.hh  test_builder.cc
cartesian_vector/: format_numerical_data.cc  format_numerical_data.hh  formatted_vector.cc  formatted_vector.hh  main.cc  state_saver.cc  state_saver.hh  vector.cc  vector.hh  vector_test.cc
caste_or_cast/: ant.cc  ant.hh  colony.cc  colony.hh  main_example.cc  nurturer.cc  nurturer.hh  provider.cc  provider.hh  queen.cc  queen.hh  worker.cc  worker.hh
chain_of_responsibility/: director.cc  handler.cc  president.cc  vice_president.cc
closer_to/: closer_to.cc  closer_to.hh  closer_to_test.cc
cmake/: CMakeLists.txt
cmake/libyaka/: CMakeLists.txt
cmake/libyaka/include/libyaka/: yaka.hh
cmake/libyaka/src/: yaka.cc
cmake/src/: main.cc
const/: person.cc  person.hh  test_person.cc
directories_infos/: directory_info.cc  directory_info.hh  main_example.cc  read_info.cc  read_info.hh
do_not_loop/: dnl.cc  dnl.hh  dnl_example.cc
doubly_linked_list/: list.cc  list.hh  node.cc  node.hh
exception/: Makefile  game.cc  game.hh  invalid_argument.cc  main.cc  player.cc  player.hh
exist_functor/: example.cc  exist.hh  exist.hxx
for_each/: for_each.hh  for_each.hxx  main.cc
my_nfts/: main.cc  (+6 more)
(+95 files in other folders)
